# gcp-security-intelligence

./: CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
src/gcp_security_intelligence/: crew.py  main.py
src/gcp_security_intelligence/config/: agents.yaml  tasks.yaml
src/gcp_security_intelligence/observability/: __init__.py  logging.py  metrics.py
src/gcp_security_intelligence/schemas/: enriched_finding.py  enriched_finding_list.py  finding.py  finding_list.py  scored_finding.py  scored_finding_list.py  security_report.py
src/gcp_security_intelligence/tools/: enrichment_tool.py  scanner_tool.py
tests/: test_enrichment_tool.py  test_scanner_tool.py
