[project]
name = "gcp_security_intelligence"
version = "0.1.0"
description = "gcp-security-intelligence using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.4",
    "google-cloud-securitycenter>=1.37.0",
    "google-cloud-logging>=3.12.0",
    "google-cloud-compute>=1.22.0",
    "google-cloud-iam>=2.15.0"
]

[project.scripts]
gcp_security_intelligence = "gcp_security_intelligence.main:run"
run_crew = "gcp_security_intelligence.main:run"
train = "gcp_security_intelligence.main:train"
replay = "gcp_security_intelligence.main:replay"
test = "gcp_security_intelligence.main:test"
run_with_trigger = "gcp_security_intelligence.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
